--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ main p {
   text-align: justify;
 }
 
-main .articulosDeblog .boxblog .parrafoBlog3, main .articulosDeblog .boxblog .parrafoBlog2, main .articulosDeblog .boxblog .parrafoBlog1 {
+main .articulosDeblog .boxblog1 .parrafoBlog3, main .articulosDeblog .boxblog1 .parrafoBlog2, main .articulosDeblog .boxblog1 .parrafoBlog1, main .articulosDeblog .boxblog3 .parrafoBlog3, main .articulosDeblog .boxblog3 .parrafoBlog2, main .articulosDeblog .boxblog3 .parrafoBlog1, main .articulosDeblog .boxblog2 .parrafoBlog3, main .articulosDeblog .boxblog2 .parrafoBlog2, main .articulosDeblog .boxblog2 .parrafoBlog1 {
   display: flex;
   margin: 2px 10px 2px 10px;
   flex-wrap: nowrap;
@@ -129,28 +129,84 @@ main .articulosDeblog {
   display: flex;
   margin: 2px 2px 2px 2px;
 }
-main .articulosDeblog .boxblog {
+main .articulosDeblog .boxblog2 {
   display: inline-flex;
   background-color: gainsboro;
   margin: 50px 10px 10px 10px;
   border-radius: 5px;
   overflow: hidden;
   align-items: center;
-  width: 455px;
+  width: 540px;
   justify-content: center;
   padding: 2px;
-  height: auto;
+  height: 812px;
 }
-main .articulosDeblog .boxblog .tarjeta {
+main .articulosDeblog .boxblog2 .tarjeta {
   margin: 2px 2px 2px 2px;
 }
-main .articulosDeblog .boxblog .tarjeta h5 {
+main .articulosDeblog .boxblog2 .tarjeta h5 {
   margin: 2px 2px 2px 27px;
 }
-main .articulosDeblog .boxblog h3 {
+main .articulosDeblog .boxblog2 h3 {
   text-align: center;
 }
-main .articulosDeblog .boxblog img {
+main .articulosDeblog .boxblog2 img {
+  width: 733px;
+  align-content: center;
+  padding: -105px 5px 5px 5px;
+  margin: 54px -202px 31px -200px;
+  object-fit: contain;
+}
+main .articulosDeblog .boxblog3 {
+  display: inline-flex;
+  background-color: gainsboro;
+  margin: 50px 10px 10px 10px;
+  border-radius: 5px;
+  overflow: hidden;
+  align-items: center;
+  width: 540px;
+  justify-content: center;
+  padding: 2px;
+  height: 812px;
+}
+main .articulosDeblog .boxblog3 .tarjeta {
+  margin: 2px 2px 2px 2px;
+}
+main .articulosDeblog .boxblog3 .tarjeta h5 {
+  margin: 2px 2px 2px 27px;
+}
+main .articulosDeblog .boxblog3 h3 {
+  text-align: center;
+}
+main .articulosDeblog .boxblog3 img {
+  width: 733px;
+  align-content: center;
+  padding: -105px 5px 5px 5px;
+  margin: 54px -202px 31px -200px;
+  object-fit: contain;
+}
+main .articulosDeblog .boxblog1 {
+  display: inline-flex;
+  background-color: gainsboro;
+  margin: 50px 10px 10px 10px;
+  border-radius: 5px;
+  overflow: hidden;
+  align-items: center;
+  width: 540px;
+  justify-content: center;
+  padding: 2px;
+  height: 812px;
+}
+main .articulosDeblog .boxblog1 .tarjeta {
+  margin: 2px 2px 2px 2px;
+}
+main .articulosDeblog .boxblog1 .tarjeta h5 {
+  margin: 2px 2px 2px 27px;
+}
+main .articulosDeblog .boxblog1 h3 {
+  text-align: center;
+}
+main .articulosDeblog .boxblog1 img {
   width: 733px;
   align-content: center;
   padding: -105px 5px 5px 5px;
@@ -604,28 +660,33 @@ footer .direccion2 {
     margin: 54px 238px 27px 666px;
     width: 35%;
     height: 50%;
+    display: none;
   }
   body main .imagenDelgp2 img {
     display: flex;
     margin: -18px 238px 27px 667px;
     width: 35%;
     height: 50%;
+    display: none;
   }
   body main .textosDelgp {
     display: flex;
-    margin: -237px 0px 176px 17px;
+    margin: -10px 0px 176px 196px;
     width: -127px;
     flex-direction: column;
+    text-align: justify;
   }
   body main .textosDelgp p {
     display: flex;
-    margin: 10px 66px 2px 2px;
+    margin: 10px 66px 2px -53px;
     text-align: left;
-    width: 587px;
+    width: 731px;
+    text-align: justify;
   }
   body main .articulosDeblog {
     display: flex;
-    margin: 28px 0px 33px 76px;
+    margin: 28px 0px 33px 210px;
+    flex-direction: column;
   }
   body main .articulosDeblog .boxblog {
     display: inline-flex;
@@ -699,9 +760,10 @@ footer .direccion2 {
   body main .imagenesParacontacto .imagenDelnewslatter2 {
     display: none;
   }
-  body main .imagenesParacontacto .imagenDelnewslatter1 {
+  body main .imagenesParacontacto .imagenDelnewslatter1 img {
+    margin: 2px -8px 109px -18px;
     height: 503px;
-    margin: -628px -8px 109px 868px;
+    margin: -1px -8px 109px -23px;
   }
   body main .boxNewslatter {
     display: flex;
@@ -780,15 +842,23 @@ footer .direccion2 {
   body main h3 {
     margin: 10px;
   }
+  body main .textosDelgp {
+    display: flex;
+    margin: -10px 0px 176px 74px;
+    width: -127px;
+    flex-direction: column;
+    text-align: justify;
+  }
   body main .noticias {
     display: flex;
     align-items: center;
     display: block;
-    margin: 0px -61px;
+    margin: 0px 126px;
   }
   body main .articulosDeblog {
     justify-content: center;
-    margin: 2px 2px 2px -122px;
+    margin: 2px 2px 2px 95px;
+    flex-direction: column;
   }
   body main .box {
     display: inline-flex;
@@ -813,7 +883,15 @@ footer .direccion2 {
   }
   body main .textoDelmain p {
     display: flex;
-    width: 738px;
+    width: 681px;
+    margin: 2px 2px 2px 40px;
+  }
+  body main .textosDelgp p {
+    display: flex;
+    margin: 10px 66px 2px -32px;
+    text-align: left;
+    width: 681px;
+    text-align: justify;
   }
   body main .encabezadosDeseccion h1,
   body main .tituloDelapagina h1,
@@ -841,6 +919,9 @@ footer .direccion2 {
     height: 500px;
     flex-direction: column;
     flex-wrap: wrap;
+  }
+  .imagenDelnewslatter1 {
+    display: none;
   }
   .nav {
     flex-direction: column;
@@ -902,7 +983,7 @@ footer .direccion2 {
   }
   body main .textosDelgp {
     display: flex;
-    margin: -237px 0px 176px 17px;
+    margin: 29px 0px 176px 17px;
     width: -127px;
     flex-direction: column;
     padding: 2px 2px 2px 2px;
@@ -935,10 +1016,10 @@ footer .direccion2 {
   body main .noticias .box {
     display: inline-flex;
     background-color: gainsboro;
-    margin: 90px -76px 31px 102px;
+    margin: 90px -76px 31px 56px;
     border-radius: 5px;
-    box-shadow: 5px 5px 15px gray;
     overflow: hidden;
+    width: 425px;
   }
   body main .noticias .box img {
     height: 290px;
@@ -1008,19 +1089,65 @@ footer .direccion2 {
     flex-direction: column;
   }
   body main .articulosDeblog {
-    justify-content: center;
-    margin: 2px 2px 2px -6px;
+    display: flex;
+    margin: 28px 0px 33px 210px;
+    flex-direction: column;
   }
-  body main .articulosDeblog .boxblog {
+  body main .articulosDeblog .boxblog1,
+  body main .articulosDeblog .boxblog2,
+  body main .articulosDeblog .boxblog3 {
     display: inline-flex;
     background-color: gainsboro;
-    margin: 50px 2px 3px 29px;
+    margin: 50px 50px 10px -210px;
     border-radius: 5px;
     overflow: hidden;
     align-items: center;
-    width: 371px;
+    width: 420px;
     justify-content: center;
     padding: 16px;
+  }
+  body main .articulosDeblog .boxblog1 .tarjeta,
+  body main .articulosDeblog .boxblog2 .tarjeta,
+  body main .articulosDeblog .boxblog3 .tarjeta {
+    margin: 2px 2px 2px 2px;
+  }
+  body main .articulosDeblog .boxblog1 .tarjeta h5,
+  body main .articulosDeblog .boxblog2 .tarjeta h5,
+  body main .articulosDeblog .boxblog3 .tarjeta h5 {
+    margin: 2px 2px 2px 38px;
+    height: 42px;
+    width: 289px;
+  }
+  body main .articulosDeblog .boxblog1 .parrafoBlog1,
+  body main .articulosDeblog .boxblog1 .parrafoBlog2,
+  body main .articulosDeblog .boxblog1 .parrafoBlog3,
+  body main .articulosDeblog .boxblog2 .parrafoBlog1,
+  body main .articulosDeblog .boxblog2 .parrafoBlog2,
+  body main .articulosDeblog .boxblog2 .parrafoBlog3,
+  body main .articulosDeblog .boxblog3 .parrafoBlog1,
+  body main .articulosDeblog .boxblog3 .parrafoBlog2,
+  body main .articulosDeblog .boxblog3 .parrafoBlog3 {
+    display: flex;
+    margin: 2px 2px 16px -6px;
+    flex-wrap: nowrap;
+    width: 380px;
+    height: 198px;
+    overflow: hidden;
+  }
+  body main .articulosDeblog .boxblog1 p,
+  body main .articulosDeblog .boxblog2 p,
+  body main .articulosDeblog .boxblog3 p {
+    margin: 5px 20px 5px 20px;
+    text-align: justify;
+  }
+  body main .articulosDeblog .boxblog1 img,
+  body main .articulosDeblog .boxblog2 img,
+  body main .articulosDeblog .boxblog3 img {
+    width: 733px;
+    align-content: center;
+    padding: -105px 5px 5px 5px;
+    margin: 54px -202px 31px -165px;
+    object-fit: contain;
   }
   body main .textoDelmain p {
     display: flex;
@@ -1053,6 +1180,9 @@ footer .direccion2 {
   body main .imagenDelmain2,
   body main .imagenDelmain3,
   body main .imagenDelmain4 {
+    display: none;
+  }
+  body main .imagenDelnewslatter1 {
     display: none;
   }
   body main .encabezadosDeseccion h2 {
