--- a/css/style.css
+++ b/css/style.css
@@ -748,7 +748,7 @@ footer .direccion2 {
     justify-content: left;
     width: 0px;
     height: 805px;
-    margin: -747px 1090px 63px 554px;
+    margin: -747px 1090px 63px 530px;
   }
   body main .imagenDelmain2,
   body main .imagenDelmain3,
@@ -1177,6 +1177,276 @@ footer .direccion2 {
     align-content: flex-end;
   }
   body main .imagenDelmain,
+  body main .imagenDelmain2,
+  body main .imagenDelmain3,
+  body main .imagenDelmain4 {
+    display: none;
+  }
+  body main .imagenDelnewslatter1 {
+    display: none;
+  }
+  body main .encabezadosDeseccion h2 {
+    display: flex;
+    font-size: large;
+  }
+  body main .box {
+    margin: 40px 35px 10px 35px;
+  }
+  footer .listaPie1 ul,
+  footer .listaPie2 ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 10px 10px 10px;
+  }
+  footer .listaPie1 ul h2,
+  footer .listaPie2 ul h2 {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 320px) {
+  body {
+    grid-template-areas: "header" "nav" "nav" "main" "pie";
+    grid-template-columns: 150px;
+    grid-template-rows: 100px 1fr 1fr auto 1fr;
+    display: block;
+  }
+  body .tituloDelapagina {
+    padding: 30px;
+  }
+  body .nav {
+    flex-direction: column;
+  }
+  body main .box {
+    background-color: gainsboro;
+    margin: 13px -138px 32px 38px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px gray;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    width: 340px;
+  }
+  body main .box img {
+    max-width: 100%;
+    object-fit: cover;
+  }
+  body main .tablaDepuntuacion {
+    display: none;
+  }
+  body main .imagenDelmain img {
+    display: flex;
+    justify-content: left;
+    width: 0px;
+    height: 805px;
+    margin: -747px 1090px 63px 522px;
+  }
+  body main .encabezadosDeseccion h2 {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 22px;
+  }
+  body main .imagenDelgp2 img,
+  body main .imagenDelgp img {
+    display: none;
+  }
+  body main .textosDelgp {
+    display: flex;
+    margin: 29px 0px 176px 17px;
+    width: -127px;
+    flex-direction: column;
+    padding: 2px 2px 2px 2px;
+  }
+  body main .textosDelgp p {
+    width: 96%;
+    padding: 2px 2px 2px 2px;
+    display: flex;
+    flex-direction: column;
+    margin: 2px 2px 79px 2px;
+  }
+  body main .textoDelmain p {
+    display: flex;
+    width: 385px;
+    text-align: justify;
+    margin: 47px 2px 2px 14px;
+  }
+  body main .encabezadosDeseccion h1 {
+    display: flex;
+    width: 385px;
+    text-align: justify;
+    margin: 47px 2px 2px 26px;
+  }
+  body main .noticias {
+    display: flex;
+    align-items: center;
+    display: block;
+    margin: 2px 2px 2px -57px;
+  }
+  body main .noticias .box {
+    display: inline-flex;
+    background-color: gainsboro;
+    margin: 90px -76px 31px 56px;
+    border-radius: 5px;
+    overflow: hidden;
+    width: 425px;
+  }
+  body main .noticias .box img {
+    height: 290px;
+    width: 350px;
+    object-fit: cover;
+    margin: 30px 20px 30px 2px;
+    object-fit: cover;
+  }
+  body main .noticias .box .tarjetaNoticia1 {
+    display: flex;
+    background-color: gainsboro;
+    margin: 5px;
+    border-radius: 5px;
+    align-content: center;
+    width: 500px;
+    margin: 20px 20px 20px 20px;
+    flex-direction: column;
+  }
+  body main .noticias .box .tarjetaNoticia2 {
+    display: flex;
+    background-color: gainsboro;
+    margin: 5px;
+    border-radius: 5px;
+    align-content: center;
+    width: 500px;
+    margin: 20px 20px 20px 20px;
+    flex-direction: column;
+  }
+  body main .noticias .box .tarjetaNoticia3 {
+    display: flex;
+    background-color: gainsboro;
+    margin: 5px;
+    border-radius: 5px;
+    align-content: center;
+    width: 500px;
+    margin: 20px 20px 20px 20px;
+    flex-direction: column;
+  }
+  body main .noticias .box .tarjetaNoticia4 {
+    display: flex;
+    background-color: gainsboro;
+    margin: 5px;
+    border-radius: 5px;
+    align-content: center;
+    width: 500px;
+    margin: 20px 20px 20px 20px;
+    flex-direction: column;
+  }
+  body main .noticias .box .tarjetaNoticia5 {
+    display: flex;
+    background-color: gainsboro;
+    margin: 5px;
+    border-radius: 5px;
+    align-content: center;
+    width: 500px;
+    margin: 20px 20px 20px 20px;
+    flex-direction: column;
+  }
+  body main .noticias .box .tarjetaNoticia6 {
+    display: flex;
+    background-color: gainsboro;
+    margin: 5px;
+    border-radius: 5px;
+    align-content: center;
+    width: 500px;
+    margin: 20px 20px 20px 20px;
+    flex-direction: column;
+  }
+  body main .articulosDeblog {
+    display: flex;
+    margin: 28px 0px 33px 210px;
+    flex-direction: column;
+  }
+  body main .articulosDeblog .boxblog1,
+  body main .articulosDeblog .boxblog2,
+  body main .articulosDeblog .boxblog3 {
+    display: inline-flex;
+    background-color: gainsboro;
+    margin: 50px 50px 10px -187px;
+    border-radius: 5px;
+    overflow: hidden;
+    align-items: center;
+    width: 320px;
+    justify-content: center;
+    padding: 16px;
+  }
+  body main .articulosDeblog .boxblog1 .tarjeta,
+  body main .articulosDeblog .boxblog2 .tarjeta,
+  body main .articulosDeblog .boxblog3 .tarjeta {
+    margin: 2px 2px 2px 2px;
+  }
+  body main .articulosDeblog .boxblog1 .tarjeta h5,
+  body main .articulosDeblog .boxblog2 .tarjeta h5,
+  body main .articulosDeblog .boxblog3 .tarjeta h5 {
+    margin: 2px 2px 2px 38px;
+    height: 42px;
+    width: 289px;
+  }
+  body main .articulosDeblog .boxblog1 .parrafoBlog1,
+  body main .articulosDeblog .boxblog1 .parrafoBlog2,
+  body main .articulosDeblog .boxblog1 .parrafoBlog3,
+  body main .articulosDeblog .boxblog2 .parrafoBlog1,
+  body main .articulosDeblog .boxblog2 .parrafoBlog2,
+  body main .articulosDeblog .boxblog2 .parrafoBlog3,
+  body main .articulosDeblog .boxblog3 .parrafoBlog1,
+  body main .articulosDeblog .boxblog3 .parrafoBlog2,
+  body main .articulosDeblog .boxblog3 .parrafoBlog3 {
+    display: flex;
+    margin: 2px 2px 16px -6px;
+    flex-wrap: nowrap;
+    width: 380px;
+    height: 198px;
+    overflow: hidden;
+  }
+  body main .articulosDeblog .boxblog1 p,
+  body main .articulosDeblog .boxblog2 p,
+  body main .articulosDeblog .boxblog3 p {
+    margin: 5px 20px 5px 20px;
+    text-align: justify;
+  }
+  body main .articulosDeblog .boxblog1 img,
+  body main .articulosDeblog .boxblog2 img,
+  body main .articulosDeblog .boxblog3 img {
+    width: 733px;
+    align-content: center;
+    padding: -105px 5px 5px 5px;
+    margin: 54px -202px 31px -165px;
+    object-fit: contain;
+  }
+  body main .textoDelmain p {
+    display: flex;
+    width: 385px;
+    text-align: justify;
+  }
+  body main .boxNewslatter {
+    display: flex;
+    background-color: gainsboro;
+    margin: 16px 215px 18px 11px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px gray;
+    overflow: hidden;
+    align-content: flex-end;
+    width: 400px;
+    height: 480px;
+    align-items: center;
+    flex-direction: row;
+  }
+  body main .boxNewslatter h2 {
+    text-align: center;
+    margin: 10px -28px 411px -23px;
+  }
+  body main .boxNewslatter .labelsDeformulario {
+    display: flex;
+    flex-direction: column;
+    align-content: flex-end;
+  }
   body main .imagenDelmain2,
   body main .imagenDelmain3,
   body main .imagenDelmain4 {
