--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -197,6 +197,7 @@ footer {
             }
 
 
+
             .imagenDelmain2,
             .imagenDelmain3,
             .imagenDelmain4 {
@@ -474,7 +475,7 @@ footer {
                 justify-content: left;
                 width: 0px;
                 height: 805px;
-                margin: -747px 1090px 63px 554px;
+                margin: -747px 1090px 63px 530px;
 
 
             }
@@ -710,9 +711,11 @@ footer {
             }
         }
     }
+
     .imagenDelnewslatter1 {
-       display: none;
+        display: none;
     }
+
     .nav {
         flex-direction: column;
         background-color: #07371c;
@@ -1018,6 +1021,330 @@ footer {
             }
 
             .imagenDelmain,
+            .imagenDelmain2,
+            .imagenDelmain3,
+            .imagenDelmain4 {
+                display: none;
+            }
+
+            .imagenDelnewslatter1 {
+                display: none;
+            }
+
+            .encabezadosDeseccion h2 {
+                display: flex;
+                font-size: large;
+            }
+
+            .box {
+                margin: 40px 35px 10px 35px;
+            }
+        }
+    }
+
+    footer {
+
+        .listaPie1 ul,
+        .listaPie2 ul {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 10px 10px 10px 10px;
+
+            h2 {
+                display: flex;
+                flex-direction: column;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 320px) {
+
+    body {
+        grid-template-areas:
+            "header"
+            "nav"
+            "nav"
+            "main"
+            "pie";
+        grid-template-columns: 150px;
+        grid-template-rows: 100px 1fr 1fr auto 1fr;
+        display: block;
+
+        .tituloDelapagina {
+            padding: 30px;
+        }
+
+        .nav {
+            flex-direction: column;
+        }
+
+        main {
+            .box {
+                background-color: gainsboro;
+                margin: 13px -138px 32px 38px;
+                border-radius: 5px;
+                box-shadow: 5px 5px 15px gray;
+                overflow: hidden;
+                align-items: center;
+                justify-content: center;
+                width: 340px;
+
+                img {
+                    max-width: 100%;
+                    object-fit: cover;
+                }
+            }
+            .tablaDepuntuacion {
+               display: none;
+            }
+            .imagenDelmain {
+                img {
+                    display: flex;
+                    justify-content: left;
+                    width: 0px;
+                    height: 805px;
+                    margin: -747px 1090px 63px 522px;
+                }
+            }
+
+            .encabezadosDeseccion {
+                h2 {
+                    display: flex;
+                    justify-content: center;
+                    margin-top: 40px;
+                    margin-bottom: 22px;
+                }
+
+            }
+
+            .imagenDelgp2,
+            .imagenDelgp {
+                img {
+                    display: none;
+
+                }
+            }
+
+            .textosDelgp {
+                display: flex;
+                margin: 29px 0px 176px 17px;
+                width: -127px;
+                flex-direction: column;
+                padding: 2px 2px 2px 2px;
+
+                p {
+                    width: 96%;
+                    padding: 2px 2px 2px 2px;
+                    display: flex;
+                    flex-direction: column;
+                    margin: 2px 2px 79px 2px;
+                }
+
+            }
+
+            .textoDelmain {
+                p {
+                    display: flex;
+                    width: 385px;
+                    text-align: justify;
+                    margin: 47px 2px 2px 14px;
+                }
+            }
+
+            .encabezadosDeseccion {
+                h1 {
+                    display: flex;
+                    width: 385px;
+                    text-align: justify;
+                    margin: 47px 2px 2px 26px;
+                }
+            }
+
+            .noticias {
+                display: flex;
+                align-items: center;
+                display: block;
+                margin: 2px 2px 2px -57px;
+
+                .box {
+                    display: inline-flex;
+                    background-color: gainsboro;
+                    margin: 90px -76px 31px 56px;
+                    border-radius: 5px;
+                    overflow: hidden;
+                    width: 425px;
+
+                    img {
+                        height: 290px;
+                        width: 350px;
+                        object-fit: cover;
+                        margin: 30px 20px 30px 2px;
+                        object-fit: cover;
+                    }
+
+                    .tarjetaNoticia1 {
+                        display: flex;
+                        background-color: gainsboro;
+                        margin: 5px;
+                        border-radius: 5px;
+                        align-content: center;
+                        width: 500px;
+                        margin: 20px 20px 20px 20px;
+                        flex-direction: column;
+                    }
+
+                    .tarjetaNoticia2 {
+                        display: flex;
+                        background-color: gainsboro;
+                        margin: 5px;
+                        border-radius: 5px;
+                        align-content: center;
+                        width: 500px;
+                        margin: 20px 20px 20px 20px;
+                        flex-direction: column;
+                    }
+
+                    .tarjetaNoticia3 {
+                        display: flex;
+                        background-color: gainsboro;
+                        margin: 5px;
+                        border-radius: 5px;
+                        align-content: center;
+                        width: 500px;
+                        margin: 20px 20px 20px 20px;
+                        flex-direction: column;
+                    }
+
+                    .tarjetaNoticia4 {
+                        display: flex;
+                        background-color: gainsboro;
+                        margin: 5px;
+                        border-radius: 5px;
+                        align-content: center;
+                        width: 500px;
+                        margin: 20px 20px 20px 20px;
+                        flex-direction: column;
+                    }
+
+                    .tarjetaNoticia5 {
+                        display: flex;
+                        background-color: gainsboro;
+                        margin: 5px;
+                        border-radius: 5px;
+                        align-content: center;
+                        width: 500px;
+                        margin: 20px 20px 20px 20px;
+                        flex-direction: column;
+                    }
+
+                    .tarjetaNoticia6 {
+                        display: flex;
+                        background-color: gainsboro;
+                        margin: 5px;
+                        border-radius: 5px;
+                        align-content: center;
+                        width: 500px;
+                        margin: 20px 20px 20px 20px;
+                        flex-direction: column;
+                    }
+                }
+
+
+            }
+
+            .articulosDeblog {
+                display: flex;
+                margin: 28px 0px 33px 210px;
+                flex-direction: column;
+
+                .boxblog1,
+                .boxblog2,
+                .boxblog3 {
+                    display: inline-flex;
+                    background-color: $color-cajas;
+                    margin: 50px 50px 10px -187px;
+                    border-radius: 5px;
+                    overflow: hidden;
+                    align-items: center;
+                    width: 320px;
+                    justify-content: center;
+                    padding: 16px;
+
+
+                    .tarjeta {
+                        margin: 2px 2px 2px 2px;
+
+                        h5 {
+                            margin: 2px 2px 2px 38px;
+                            height: 42px;
+                            width: 289px;
+                        }
+                    }
+
+                    .parrafoBlog1,
+                    .parrafoBlog2,
+                    .parrafoBlog3 {
+                        display: flex;
+                        margin: 2px 2px 16px -6px;
+                        flex-wrap: nowrap;
+                        width: 380px;
+                        height: 198px;
+                        overflow: hidden;
+                    }
+
+                    p {
+                        margin: 5px 20px 5px 20px;
+                        text-align: justify;
+
+                    }
+
+                    img {
+                        width: 733px;
+                        align-content: center;
+                        padding: -105px 5px 5px 5px;
+                        margin: 54px -202px 31px -165px;
+                        object-fit: contain;
+                    }
+                }
+            }
+
+
+            .textoDelmain {
+                p {
+                    display: flex;
+                    width: 385px;
+                    text-align: justify;
+                }
+            }
+
+            .boxNewslatter {
+                display: flex;
+                background-color: gainsboro;
+                margin: 16px 215px 18px 11px;
+                border-radius: 5px;
+                box-shadow: 5px 5px 15px gray;
+                overflow: hidden;
+                align-content: flex-end;
+                width: 400px;
+                height: 480px;
+                align-items: center;
+                flex-direction: row;
+
+                h2 {
+                    text-align: center;
+                    margin: 10px -28px 411px -23px;
+                }
+
+                .labelsDeformulario {
+                    display: flex;
+                    flex-direction: column;
+                    align-content: flex-end;
+                }
+            }
+
+
             .imagenDelmain2,
             .imagenDelmain3,
             .imagenDelmain4 {
