se realizan correcciones a htmls y elementos de bootstrap

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,3 +23,5 @@
 @import "layout/navigation";
 @import "layout/grid";
 @import "layout/footer";
+// Bootstrap: Componentes de la estructura general del sitio web a nivel bootstrap
+@import "vendors/bootstrap"
