--- a/css/style.css
+++ b/css/style.css
@@ -1761,7 +1761,7 @@ header .bg-body-tertiary {
   background-color: rgba(var(--bs-tertiary-bg-rgb), var(--bs-bg-opacity)) !important;
 }
 
-navbar {
+.navbar {
   --bs-navbar-padding-x: 0;
   --bs-navbar-padding-y: 0.5rem;
   --bs-navbar-color: rgba(var(--bs-emphasis-color-rgb), 0.65);
@@ -1788,6 +1788,10 @@ navbar {
   align-items: center;
   justify-content: space-between;
   padding: var(--bs-navbar-padding-y) var(--bs-navbar-padding-x);
+}
+
+.carousel {
+  position: relative;
 }
 
 /*# sourceMappingURL=style.css.map */
