--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   box-sizing: border-box;
   margin: 0;
@@ -62,34 +63,26 @@ main .encabezadosDeseccion h1 {
 }
 main .imagenDelmain {
   display: flex;
-  justify-content: left;
   margin: -389px 1023px 514px 881px;
-  object-fit: cover;
   width: 639px;
   height: 341px;
   object-fit: cover;
 }
 main .imagenDelmain2 {
   display: flex;
-  justify-content: left;
   margin: -856px 1102px 410px 1098px;
-  object-fit: cover;
   height: 341px;
   object-fit: cover;
 }
 main .imagenDelmain3 {
   display: flex;
-  justify-content: left;
   margin: -750px 1102px 0px 1315px;
-  object-fit: cover;
   height: 341px;
   object-fit: cover;
 }
 main .imagenDelmain4 {
   display: flex;
-  justify-content: left;
   margin: -341px 1329px 149px 1613px;
-  object-fit: cover;
   display: none;
   height: 341px;
   object-fit: cover;
@@ -312,17 +305,6 @@ section .boxNewslatter .formularioDecontacto .labelsDeformulario {
   font-weight: 500;
 }
 
-main .noticias .box .tarjetaNoticia6, main .noticias .box .tarjetaNoticia5, main .noticias .box .tarjetaNoticia4, main .noticias .box .tarjetaNoticia3, main .noticias .box .tarjetaNoticia2, main .noticias .box .tarjetaNoticia1 {
-  display: flex;
-  background-color: gainsboro;
-  margin: 5px;
-  border-radius: 5px;
-  align-content: center;
-  width: 500px;
-  margin: 20px 20px 20px 20px;
-  flex-direction: column;
-}
-
 main h5 {
   margin: 10px;
 }
@@ -334,14 +316,41 @@ main .noticias {
   display: flex;
   align-items: center;
   display: block;
-  margin: 0px 57px;
+  margin: 0px 37px;
 }
 main .noticias .box {
-  display: flex;
-  flex-direction: row;
   display: inline-flex;
-  margin: 17px 30px 20px 20px;
+  background-color: gainsboro;
+  margin: 38px 69px;
+  border-radius: 5px;
+  overflow: hidden;
+  width: 35%;
 }
+main .noticias .box .tarjetaNoticias1 img {
+  max-width: 100%;
+  object-fit: cover;
+}
+main .noticias .box .tarjetaNoticias2 img {
+  max-width: 100%;
+  object-fit: cover;
+}
+main .noticias .box .tarjetaNoticias3 img {
+  max-width: 100%;
+  object-fit: cover;
+}
+main .noticias .box .tarjetaNoticias4 img {
+  max-width: 100%;
+  object-fit: cover;
+}
+main .noticias .box .tarjetaNoticias5 img {
+  max-width: 100%;
+  object-fit: cover;
+}
+main .noticias .box .tarjetaNoticias6 img {
+  max-width: 100%;
+  object-fit: cover;
+}
+
 header {
   background-color: rgba(3, 53, 25, 0.9843137255);
   opacity: 95%;
@@ -400,6 +409,141 @@ footer {
   grid-area: pie;
 }
 
+@media screen and (max-width: 1518px) {
+  body {
+    grid-template-areas: "header header" "nav nav" "main main" "pie pie";
+    grid-template-columns: 512px 512px;
+    grid-template-rows: 150px 20px auto 1fr;
+  }
+  body main .imagenDelgp2 img img {
+    margin: -13px 0px 27px 978px;
+    width: 35%;
+    height: auto;
+  }
+  body main .textosDelgp {
+    display: flex;
+    margin: -400px 4px 176px 17px;
+    flex-direction: column;
+  }
+  body main .imagenDelgp img {
+    display: flex;
+    margin: 51px 257px 30px 969px;
+    width: 36%;
+    height: 50%;
+  }
+  body main .imagenDelmain {
+    display: flex;
+    justify-content: left;
+    margin: -389px 1023px 514px 881px;
+    object-fit: cover;
+    width: 639px;
+    height: 341px;
+    object-fit: cover;
+  }
+  body main .imagenDelmain2 {
+    display: flex;
+    justify-content: left;
+    margin: -396px 957px 111px 1089px;
+    object-fit: cover;
+    height: 341px;
+    object-fit: cover;
+  }
+  body main .box .tarjetaNoticias1 img {
+    width: 100%;
+    height: 200px;
+  }
+  body main .noticias {
+    display: flex;
+    align-items: center;
+    display: block;
+    margin: 0px 197px;
+  }
+  body main .noticias .box {
+    align-items: flex-start;
+    flex-direction: column;
+    margin: 2px 6px 2px 3px;
+  }
+  body main .imagenesParacontacto {
+    margin: 125px 2px 2px -270px;
+  }
+  body main .imagenesParacontacto .imagenDelnewslatter1 {
+    display: none;
+  }
+  body main .imagenesParacontacto .imagenDelnewslatter2 img {
+    margin: 18px 2px 109px -72px;
+  }
+  body main .imagenesParacontacto .imagenDelnewslatter3 img {
+    margin: 18px 2px 116px 20px;
+  }
+  body main .imagenesParacontacto .imagenDelnewslatter4 {
+    display: none;
+  }
+  body main .boxblog img {
+    width: 100%;
+    margin: 0;
+    height: auto;
+  }
+  body main .imagenDelmain {
+    margin: -384px 10px 54px auto;
+  }
+  body main .imagenDelmain3,
+  body main .imagenDelmain4 {
+    display: none;
+  }
+  body main .tablaDepuntuacion {
+    margin: -133px auto 2px auto;
+  }
+  body main .boxNewslatter {
+    margin: 40px 5 10px auto;
+  }
+  body main .encabezadosDeseccion h1,
+  body main .tituloDelapagina h1,
+  body main .tituloDelapagina h2,
+  body main .encabezadosDeseccion h2 {
+    margin-top: 150px;
+    margin-bottom: 20px;
+  }
+  body main .encabezadosDeseccion h1 {
+    margin-top: 24px;
+  }
+  body main .encabezadosDeseccion h2 {
+    margin-top: 26px;
+  }
+  body main .box img {
+    width: 100%;
+  }
+}
+.tituloDelapagina {
+  padding: 30px;
+}
+
+.nav {
+  flex-direction: column;
+  background-color: #07371c;
+}
+
+.ultimoGpdisputado #img {
+  width: 100%;
+  height: 100%;
+}
+
+footer .listaPie1 ul,
+footer .listaPie2 ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+footer .listaPie1 ul h2,
+footer .listaPie2 ul h2 {
+  display: flex;
+  flex-direction: column;
+}
+footer .direccion2 {
+  display: flex;
+  margin: -157px 0px 0px 0px;
+}
+
 @media screen and (max-width: 1440px) {
   body {
     grid-template-areas: "header header" "nav nav" "main main" "pie pie";
@@ -408,9 +552,9 @@ footer {
   }
   body main .imagenDelgp2 img {
     display: flex;
-    margin: -18px 238px 27px 720px;
-    width: 50%;
-    height: 50%;
+    margin: -18px 238px 27px 901px;
+    width: 37%;
+    height: 37%;
   }
   body main .portadaDeblog img {
     display: flex;
@@ -433,8 +577,8 @@ footer {
   }
   body main .imagenDelgp img {
     display: flex;
-    margin: 54px 238px 27px 720px;
-    width: 50%;
+    margin: 54px 238px 27px 901px;
+    width: 37%;
     height: 50%;
   }
   body main .imagenDelgp3 {
@@ -478,7 +622,7 @@ footer {
     margin: -628px -8px 109px 812px;
   }
   body main .imagenesParacontacto .imagenDelnewslatter2 {
-    margin: -628px 2px 109px 24px;
+    margin: -628px 2px 109px 1107px;
   }
   body main .imagenesParacontacto .imagenDelnewslatter3 {
     margin: -628px 2px 116px 12px;
@@ -565,6 +709,7 @@ footer {
   }
   body main .encabezadosDeseccion h2 {
     margin-top: 26px;
+    margin-bottom: 128px;
   }
   body main .box img {
     display: flex;
@@ -677,13 +822,40 @@ footer .direccion2 {
   body main .noticias .box {
     display: inline-flex;
     background-color: gainsboro;
-    margin: 38px 69px;
+    margin: 53px 7px;
     border-radius: 5px;
+    background-color: gainsboro;
     overflow: hidden;
+    width: 458px;
+    height: 458px;
   }
-  body main .noticias .box .tarjetaNoticias1 img {
+  body main .noticias .box .tarjetaNoticia1,
+  body main .noticias .box .tarjetaNoticia2,
+  body main .noticias .box .tarjetaNoticia3,
+  body main .noticias .box .tarjetaNoticia4,
+  body main .noticias .box .tarjetaNoticia5,
+  body main .noticias .box .tarjetaNoticia6 {
+    display: flex;
+    background-color: gainsboro;
+    margin: 5px;
+    border-radius: 5px;
+    align-content: center;
+    width: 500px;
+    margin: 20px 20px 20px 20px;
+    flex-direction: column;
+  }
+  body main .noticias .box .tarjetaNoticia1 img,
+  body main .noticias .box .tarjetaNoticia2 img,
+  body main .noticias .box .tarjetaNoticia3 img,
+  body main .noticias .box .tarjetaNoticia4 img,
+  body main .noticias .box .tarjetaNoticia5 img,
+  body main .noticias .box .tarjetaNoticia6 img {
     max-width: 100%;
     object-fit: cover;
+    width: 110%;
+    height: 50%;
+    margin: 2px 2px 2px 0px;
+    overflow: hidden;
   }
   body main .portadaDenoticias img {
     display: flex;
@@ -854,8 +1026,17 @@ footer .direccion2 {
     border-radius: 5px;
     align-content: center;
     width: 500px;
-    margin: 20px 20px 20px 20px;
+    margin: 20px 20px 20px -8px;
     flex-direction: column;
+  }
+  body main .noticias .box .tarjetaNoticia1 h5,
+  body main .noticias .box .tarjetaNoticia2 h5,
+  body main .noticias .box .tarjetaNoticia3 h5,
+  body main .noticias .box .tarjetaNoticia4 h5,
+  body main .noticias .box .tarjetaNoticia5 h5,
+  body main .noticias .box .tarjetaNoticia6 h5 {
+    margin: 2px 2px 29px 29px;
+    width: 85%;
   }
   body main .noticias .box .tarjetaNoticia1 img,
   body main .noticias .box .tarjetaNoticia2 img,
@@ -867,8 +1048,17 @@ footer .direccion2 {
     object-fit: cover;
     width: 110%;
     height: 50%;
-    margin: 2px 2px 2px 0px;
+    margin: -14px 2px 2px 0px;
     overflow: hidden;
+  }
+  body main .noticias .box .tarjetaNoticia1 p,
+  body main .noticias .box .tarjetaNoticia2 p,
+  body main .noticias .box .tarjetaNoticia3 p,
+  body main .noticias .box .tarjetaNoticia4 p,
+  body main .noticias .box .tarjetaNoticia5 p,
+  body main .noticias .box .tarjetaNoticia6 p {
+    margin: 13px 52px -16px 21px;
+    text-align: justify;
   }
   body main .imagenDelgp img {
     display: flex;
@@ -1231,10 +1421,11 @@ footer .direccion2 {
   body main .noticias .box {
     display: inline-flex;
     background-color: gainsboro;
-    margin: 90px -76px 31px 56px;
+    margin: 90px -76px 31px 65px;
     border-radius: 5px;
     overflow: hidden;
-    width: 425px;
+    width: 357px;
+    height: 610px;
   }
   body main .noticias .box img {
     height: 290px;
@@ -1253,6 +1444,23 @@ footer .direccion2 {
     margin: 20px 20px 20px 20px;
     flex-direction: column;
   }
+  body main .noticias .box .tarjetaNoticia1 h5 {
+    margin: 35px 13px 35px -3px;
+    width: 67%;
+  }
+  body main .noticias .box .tarjetaNoticia1 img {
+    max-width: 100%;
+    object-fit: cover;
+    width: 110%;
+    height: 40%;
+    margin: -14px 2px 2px -88px;
+    overflow: hidden;
+  }
+  body main .noticias .box .tarjetaNoticia1 p {
+    margin: 13px 52px -16px -7px;
+    text-align: justify;
+    width: 64%;
+  }
   body main .noticias .box .tarjetaNoticia2 {
     display: flex;
     background-color: gainsboro;
@@ -1262,6 +1470,23 @@ footer .direccion2 {
     width: 500px;
     margin: 20px 20px 20px 20px;
     flex-direction: column;
+  }
+  body main .noticias .box .tarjetaNoticia2 h5 {
+    margin: 35px 13px 35px -3px;
+    width: 67%;
+  }
+  body main .noticias .box .tarjetaNoticia2 img {
+    max-width: 100%;
+    object-fit: cover;
+    width: 110%;
+    height: 40%;
+    margin: -14px 2px 2px -88px;
+    overflow: hidden;
+  }
+  body main .noticias .box .tarjetaNoticia2 p {
+    margin: 13px 52px -16px -7px;
+    text-align: justify;
+    width: 64%;
   }
   body main .noticias .box .tarjetaNoticia3 {
     display: flex;
@@ -1273,6 +1498,23 @@ footer .direccion2 {
     margin: 20px 20px 20px 20px;
     flex-direction: column;
   }
+  body main .noticias .box .tarjetaNoticia3 h5 {
+    margin: 35px 13px 35px -3px;
+    width: 67%;
+  }
+  body main .noticias .box .tarjetaNoticia3 img {
+    max-width: 100%;
+    object-fit: cover;
+    width: 110%;
+    height: 40%;
+    margin: -14px 2px 2px -88px;
+    overflow: hidden;
+  }
+  body main .noticias .box .tarjetaNoticia3 p {
+    margin: 13px 52px -16px -7px;
+    text-align: justify;
+    width: 64%;
+  }
   body main .noticias .box .tarjetaNoticia4 {
     display: flex;
     background-color: gainsboro;
@@ -1282,6 +1524,23 @@ footer .direccion2 {
     width: 500px;
     margin: 20px 20px 20px 20px;
     flex-direction: column;
+  }
+  body main .noticias .box .tarjetaNoticia4 h5 {
+    margin: 35px 13px 35px -3px;
+    width: 67%;
+  }
+  body main .noticias .box .tarjetaNoticia4 img {
+    max-width: 100%;
+    object-fit: cover;
+    width: 110%;
+    height: 40%;
+    margin: -14px 2px 2px -88px;
+    overflow: hidden;
+  }
+  body main .noticias .box .tarjetaNoticia4 p {
+    margin: 13px 52px -16px -7px;
+    text-align: justify;
+    width: 64%;
   }
   body main .noticias .box .tarjetaNoticia5 {
     display: flex;
@@ -1293,6 +1552,23 @@ footer .direccion2 {
     margin: 20px 20px 20px 20px;
     flex-direction: column;
   }
+  body main .noticias .box .tarjetaNoticia5 h5 {
+    margin: 35px 13px 35px -3px;
+    width: 67%;
+  }
+  body main .noticias .box .tarjetaNoticia5 img {
+    max-width: 100%;
+    object-fit: cover;
+    width: 110%;
+    height: 40%;
+    margin: -14px 2px 2px -88px;
+    overflow: hidden;
+  }
+  body main .noticias .box .tarjetaNoticia5 p {
+    margin: 13px 52px -16px -7px;
+    text-align: justify;
+    width: 64%;
+  }
   body main .noticias .box .tarjetaNoticia6 {
     display: flex;
     background-color: gainsboro;
@@ -1302,6 +1578,27 @@ footer .direccion2 {
     width: 500px;
     margin: 20px 20px 20px 20px;
     flex-direction: column;
+  }
+  body main .noticias .box .tarjetaNoticia6 h5 {
+    margin: 35px 13px 35px -3px;
+    width: 67%;
+  }
+  body main .noticias .box .tarjetaNoticia6 img {
+    max-width: 100%;
+    object-fit: cover;
+    width: 110%;
+    height: 40%;
+    margin: -14px 2px 2px -88px;
+    overflow: hidden;
+  }
+  body main .noticias .box .tarjetaNoticia6 p {
+    margin: 13px 52px -16px -7px;
+    text-align: justify;
+    width: 64%;
+  }
+  body main .tablaDepuntuacion {
+    display: flex;
+    width: auto;
   }
   body main .articulosDeblog {
     display: flex;
@@ -1313,11 +1610,11 @@ footer .direccion2 {
   body main .articulosDeblog .boxblog3 {
     display: inline-flex;
     background-color: gainsboro;
-    margin: 50px 50px 10px -210px;
+    margin: 50px 50px 10px -184px;
     border-radius: 5px;
     overflow: hidden;
     align-items: center;
-    width: 420px;
+    width: 326px;
     justify-content: center;
     padding: 16px;
   }
@@ -1352,8 +1649,9 @@ footer .direccion2 {
   body main .articulosDeblog .boxblog1 p,
   body main .articulosDeblog .boxblog2 p,
   body main .articulosDeblog .boxblog3 p {
-    margin: 5px 20px 5px 20px;
+    margin: 5px 20px 5px 47px;
     text-align: justify;
+    width: 78%;
   }
   body main .articulosDeblog .boxblog1 img,
   body main .articulosDeblog .boxblog2 img,
@@ -1377,7 +1675,7 @@ footer .direccion2 {
     box-shadow: 5px 5px 15px gray;
     overflow: hidden;
     align-content: flex-end;
-    width: 400px;
+    width: 360px;
     height: 480px;
     align-items: center;
     flex-direction: row;
@@ -1418,6 +1716,165 @@ footer .direccion2 {
   footer .listaPie2 ul h2 {
     display: flex;
     flex-direction: column;
+  }
+}
+@media screen and (max-width: 325px) {
+  body {
+    grid-template-areas: "header" "nav" "nav" "main" "pie";
+    grid-template-columns: 150px;
+    grid-template-rows: 100px 1fr 1fr auto 1fr;
+    display: block;
+  }
+  body .tituloDelapagina {
+    padding: 15px;
+    /* Reduje el padding para adaptarse mejor a pantallas más pequeñas */
+  }
+  body .nav {
+    flex-direction: column;
+  }
+  body main .box {
+    margin: 10px auto;
+    /* Ajusté los márgenes para centrar el elemento */
+    width: 90%;
+    /* Cambié el ancho a un porcentaje para adaptarse mejor */
+  }
+  body main .encabezadosDeseccion h2 {
+    margin-top: 20px;
+    /* Ajusté el margen superior para separar mejor los encabezados */
+  }
+  body main .noticias {
+    margin: 10px auto;
+    /* Ajusté los márgenes para centrar el elemento */
+  }
+  body main .box .tarjetaNoticias1 img {
+    width: 100%;
+    /* Cambiado a 100% para ajustar al ancho del contenedor */
+    height: auto;
+    /* Ajustado para mantener la proporción */
+  }
+  body main .articulosDeblog {
+    display: flex;
+    margin: 10px auto;
+    /* Ajusté los márgenes para centrar el elemento */
+    flex-direction: column;
+  }
+  body main .boxblog1,
+  body main .boxblog2,
+  body main .boxblog3 {
+    display: flex;
+    background-color: gainsboro;
+    margin: 10px auto;
+    /* Ajusté los márgenes para centrar el elemento */
+    border-radius: 5px;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    /* Cambié el ancho a un porcentaje para adaptarse mejor */
+    padding: 16px;
+  }
+  body main .boxblog1 .tarjeta,
+  body main .boxblog2 .tarjeta,
+  body main .boxblog3 .tarjeta {
+    margin: 2px 2px 2px 2px;
+  }
+  body main .boxblog1 .tarjeta h5,
+  body main .boxblog2 .tarjeta h5,
+  body main .boxblog3 .tarjeta h5 {
+    margin: 2px 2px 2px 38px;
+    height: 42px;
+    width: 289px;
+  }
+  body main .boxblog1 .parrafoBlog1,
+  body main .boxblog1 .parrafoBlog2,
+  body main .boxblog1 .parrafoBlog3,
+  body main .boxblog2 .parrafoBlog1,
+  body main .boxblog2 .parrafoBlog2,
+  body main .boxblog2 .parrafoBlog3,
+  body main .boxblog3 .parrafoBlog1,
+  body main .boxblog3 .parrafoBlog2,
+  body main .boxblog3 .parrafoBlog3 {
+    display: flex;
+    margin: 2px 2px 16px -6px;
+    flex-wrap: nowrap;
+    width: 90%;
+    /* Cambié el ancho a un porcentaje para adaptarse mejor */
+    height: 198px;
+    overflow: hidden;
+  }
+  body main .boxblog1 p,
+  body main .boxblog2 p,
+  body main .boxblog3 p {
+    margin: 5px 20px 5px 20px;
+    text-align: justify;
+  }
+  body main .boxblog1 img,
+  body main .boxblog2 img,
+  body main .boxblog3 img {
+    width: 100%;
+    /* Cambiado a 100% para ajustar al ancho del contenedor */
+    height: auto;
+    /* Ajustado para mantener la proporción */
+  }
+  body main .textoDelmain p {
+    display: flex;
+    width: 90%;
+    /* Cambié el ancho a un porcentaje para adaptarse mejor */
+    text-align: justify;
+    margin: 10px auto;
+    /* Ajusté los márgenes para centrar el elemento */
+  }
+  body main .boxNewslatter {
+    margin: 10px auto;
+    /* Ajusté los márgenes para centrar el elemento */
+    width: 90%;
+    /* Cambié el ancho a un porcentaje para adaptarse mejor */
+    height: auto;
+    /* Cambié la altura a auto para adaptarse al contenido */
+    display: flex;
+    flex-direction: column;
+    background-color: gainsboro;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px gray;
+    overflow: hidden;
+    align-items: center;
+  }
+  body main .boxNewslatter h2 {
+    margin-bottom: 10px;
+    /* Ajusté el margen inferior para separar mejor los elementos */
+    text-align: center;
+  }
+  body main .boxNewslatter .labelsDeformulario {
+    display: flex;
+    flex-direction: column;
+    align-content: flex-end;
+  }
+  body main .imagenDelmain,
+  body main .imagenDelmain2,
+  body main .imagenDelmain3,
+  body main .imagenDelmain4 {
+    display: none;
+  }
+  body main .imagenDelnewslatter1 {
+    display: none;
+  }
+  body main .encabezadosDeseccion h2 {
+    display: flex;
+    font-size: large;
+  }
+  body main .box {
+    margin: 10px auto;
+    /* Ajusté los márgenes para centrar el elemento */
+  }
+  footer .listaPie1 ul,
+  footer .listaPie2 ul {
+    padding: 5px;
+    /* Reduje el padding para adaptarse mejor a pantallas más pequeñas */
+  }
+  footer .listaPie1 ul h2,
+  footer .listaPie2 ul h2 {
+    margin-bottom: 5px;
+    /* Ajusté el margen inferior para separar mejor los elementos */
   }
 }
 @media screen and (max-width: 320px) {
